[metadata]
name = django-integrates-api
description = Integrates GraphQL API.
long_description = file: README.rst
url = https://fluidattacks.com/integrates
author = FluidAttacks Development Team
author_email = development@fluidattacks.com
license = Mozilla-2.0

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
setup_requires =
    setuptools
install_requires =
    django >= 2.2

[sdist]
formats = zip